--- a/src/app.css
+++ b/src/app.css
@@ -7,8 +7,7 @@
 @layer base {
   @font-face {
     font-family: "Inter";
-    src: url("../static/fonts/Inter-VariableFont_slnt,wght.ttf")
-      format("truetype-variations");
+    src: url("../static/fonts/Inter-VariableFont_slnt,wght.ttf") format("truetype-variations");
     font-weight: 100 1000;
   }
 }
@@ -25,4 +24,18 @@ body {
 
 .pulse-loading {
   animation: loading 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+/* -------------------- */
+/* - nProgress styles - */
+/* -------------------- */
+
+#nprogress {
+  @apply pointer-events-none absolute;
+}
+
+#nprogress .bar {
+  @apply fixed z-50 top-0 left-0
+    w-full h-[2px]
+    bg-black dark:bg-white;
 }
