--- a/src/app.css
+++ b/src/app.css
@@ -1,19 +1,31 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  @font-face {
-    font-family: "Inter";
-    src: url("../static/fonts/Inter-VariableFont_slnt,wght.ttf") format("truetype-variations");
-    font-weight: 100 1000;
-  }
+@font-face {
+  font-family: Neue Machina;
+  font-style: normal;
+  font-weight: normal;
+  src: url("/fonts/neue-machina-regular.ttf") format("ttf"), url("/fonts/neue-machina-regular.otf") format("opentype"),
+    url("/fonts/neue-machina-regular.woff2") format("woff2");
 }
 
-body {
-  @apply min-h-screen flex flex-col bg-white dark:bg-black items-center gap-y-4 px-1.5;
+@font-face {
+  font-family: Space Grotesk;
+  font-style: normal;
+  font-weight: normal;
+  src: url("/fonts/space-grotesk-regular.ttf") format("ttf"), url("/fonts/space-grotesk-regular.otf") format("opentype"),
+    url("/fonts/space-grotesk-regular.woff2") format("woff2");
+}
+
+@layer base {
+  html {
+    @apply bg-darker font-space;
+  }
+
+  body {
+    @apply min-h-screen flex flex-col items-center;
+  }
 }
 
 @keyframes loading {
@@ -35,7 +47,6 @@ body {
 }
 
 #nprogress .bar {
-  @apply fixed z-50 top-0 left-0
-    w-full h-[2px]
-    bg-black dark:bg-white;
+  @apply fixed z-50 top-0 left-0 w-full h-[2px];
+  background: radial-gradient(circle, #ffb82f 0%, #b0b8ff 40%, #131313ff 85%);
 }
